my css styling with bootstrap

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>George and others Dev Agency</title>
-	<link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.css">
+	<title>George and thers Dev Agency</title>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.css"/>
+	<link rel="stylesheet"  href="main.css"/>
+
 </head>
 <body>
-Hi I am using bootstrap
+<div class="container-fluid">
+	<section class="row text-center jumbotron" id="slogan">
+	<h1>I Build the Future, and It's Awesome!!</h1>	
+    <button type="button" class="btn btn-warning">Go to My Profile</button>
+	</section>
+
+</div>
+
+
+
+
+
+<script src="bootstrap-3.3.5-dist/js/jquery.min.js"></script>
+<script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
