--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>George and thers Dev Agency</title>
+	<title>George and Others Dev Agency</title>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,10 +17,65 @@
 	</section>
 
 </div>
+<section class="container">
+	<div class="page header">
+
+	</div>
+	
+	<h1 class="text-center">Projects </h1>
+	<div class="row">
+
+		
+		<div class="col-sm-4">
+			<h3>project1</h3>
+		</div>
+
+		<div class="col-sm-4">
+			<h3>project2</h3>
+		</div>
+		<div class="col-sm-4">
+			<h3>project3</h3>
+		</div>
+
+	
+	</div>
+	<div class="row">
+
+		<div class="col-sm-4">
+			<h3>project4</h3>
+		</div>
+
+		<div class="col-sm-4">
+			<h3>project5</h3>
+		</div>
+
+		<div class="col-sm-4">
+			<h3>project3</h3>
+		</div>
+
+
+	</div>
 
 
 
+</section>
 
+
+<section class="container">
+	<div class="row">
+		
+		<div class="col-sm-2">Language</div>
+		<div class="col-sm-2">Language</div>
+		<div class="col-sm-2">Language</div>
+		<div class="col-sm-2">Language</div>
+		<div class="col-sm-2">Language</div>
+		<div class="col-sm-2">Language</div>
+
+
+	</div>
+
+</section>
+	
 
 <script src="bootstrap-3.3.5-dist/js/jquery.min.js"></script>
 <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
