--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
 
 		
 		<div class="col-sm-4">
-			<h3>project1</h3>
+
+         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRO82UWduZMZYazJ7STqQpozVMS___E2YA680Vb7agAeYlpEwzH8Q"/>
+
+			<h5>project1</h5>
 		</div>
 
 		<div class="col-sm-4">
-			<h3>project2</h3>
+			<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRDe1Tc2OzwVmRFZXoK_Ql2OKVXz6u2ToMBevBSSitsp6i6uhJBZg"/>
+			<h5>project2</h5>
 		</div>
 		<div class="col-sm-4">
-			<h3>project3</h3>
+			<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRsbWUCdR3jM-Wkp6sT49jm1VpycgeXtArIoHNLMRtQZLC8C5Xl"/>
+			<h5>project3</h5>
 		</div>
 
 	
@@ -42,14 +47,17 @@
 	<div class="row">
 
 		<div class="col-sm-4">
+			<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRsbWUCdR3jM-Wkp6sT49jm1VpycgeXtArIoHNLMRtQZLC8C5Xl"/>
 			<h3>project4</h3>
 		</div>
 
 		<div class="col-sm-4">
+			<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRsbWUCdR3jM-Wkp6sT49jm1VpycgeXtArIoHNLMRtQZLC8C5Xl"/>
 			<h3>project5</h3>
 		</div>
 
 		<div class="col-sm-4">
+			<img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRsbWUCdR3jM-Wkp6sT49jm1VpycgeXtArIoHNLMRtQZLC8C5Xl"/>
 			<h3>project3</h3>
 		</div>
 
